--- a/khoi-test.cabal
+++ b/khoi-test.cabal
@@ -23,6 +23,7 @@ library
                      , distributed-process
                      , network-transport-tcp
                      , network-transport-inmemory
+                     , mwc-random
 
 executable khoi-test
   default-language:    Haskell2010
@@ -32,7 +33,6 @@ executable khoi-test
   build-depends:       base
                      , khoi-test
                      , distributed-process
-                     
                      , network-transport-tcp
                      , network-transport-inmemory
 
