--- a/khoi-test.cabal
+++ b/khoi-test.cabal
@@ -24,6 +24,7 @@ library
                      , network-transport-tcp
                      , network-transport-inmemory
                      , mwc-random
+                     , optparse-applicative
 
 executable khoi-test
   default-language:    Haskell2010
@@ -35,6 +36,7 @@ executable khoi-test
                      , distributed-process
                      , network-transport-tcp
                      , network-transport-inmemory
+                     , optparse-applicative
 
 test-suite spec
   default-language:    Haskell2010
