--- a/khoi-test.cabal
+++ b/khoi-test.cabal
@@ -25,6 +25,7 @@ library
                      , network-transport-inmemory
                      , mwc-random
                      , optparse-applicative
+                     , binary
 
 executable khoi-test
   default-language:    Haskell2010
