--- a/stack.yaml
+++ b/stack.yaml
@@ -4,4 +4,8 @@ packages:
 - '.'
 extra-deps:
 - distributed-process-0.6.4
+- distributed-process-simplelocalnet-0.2.3.2
+- network-multicast-0.1.1
+# - binary-0.7.6.1
+# - transformers-0.4.3.0
 resolver: lts-7.2
